# zad4-delipl

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
app/: main.cpp  softBody.cpp
cmake/: Doctest.cmake  Misc.cmake
inc/: Matrix.hpp  Matrix3x3.hpp  Matrixes.hpp  Menu.hpp  Object.hpp  Quaternion.hpp  Scene.hpp  Vector.hpp  Vector3.hpp  Vectors.hpp  config.hpp  config.hpp.in
prn/: Matrix.tpp  Vector.tpp
src/: Matrix3x3.cpp  Matrixes.cpp  Menu.cpp  Object.cpp  Quaternion.cpp  Scene.cpp  Vector3.cpp  Vectors.cpp
templates/: CMakeLists.txt  con.cpp  con.hpp  main.cpp  test.hpp  test.tpp
tests/: CMakeLists.txt  main.cpp  matrix.ut.cpp  object.ut.cpp  quaternion.ut.cpp  scene.ut.cpp  vector.ut.cpp
